# Garuda

./: .gitignore  AGENTS.md  CODEX.md  CONTRIBUTING.md  LICENSE  README.md
docs/: api-specifications.md  architecture.md  backend-scaffolding.md  database-design.md  investment-framework.md  product-requirements.md  sprint-planning.md  ui-ux-design-system.md  vision.md
src/backend/: __init__.py  pyproject.toml
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  health.py
src/backend/app/core/: __init__.py  config.py
src/backend/app/db/: __init__.py  session.py
src/backend/app/jobs/: __init__.py
src/backend/app/models/: __init__.py
src/backend/app/repositories/: __init__.py
src/backend/app/research/: __init__.py
src/backend/app/schemas/: __init__.py
src/backend/app/services/: __init__.py
src/backend/tests/: test_health.py
standards/: coding-guidelines.md  engineering-standards.md  security-guidelines.md
