[project]
name = "garuda-backend"
version = "0.1.0"
description = "Garuda local-first backend API"
authors = ["Garuda Team <team@example.com>"]
readme = "README.md"
requires-python = ">=3.12"

[project.dependencies]
fastapi = "^0.114.0"
uvicorn = "^0.24.0"
sqlmodel = "^0.0.8"
pydantic = "^2.11.0"
pydantic-settings = "^2.11.0"
apscheduler = "^3.10.0"

[project.optional-dependencies]
test = ["pytest>=8.0","httpx>=0.27.0","ruff>=0.0.280"]

[tool.ruff]
line-length = 88
target-version = ["py312"]
